clusters/common/apps/istio-system/app/tailscale-eastwest-egress.yaml
---
# Tailscale egress proxy services for Istio cross-cluster communication.
# These services create standalone egress proxies to reach remote clusters'
# eastwest gateways, avoiding direct Tailscale CGNAT IPs that pods cannot reach.
apiVersion: v1
kind: Service
metadata:
  name: robbinsdale-istio-eastwestgateway
  namespace: istio-system
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: merge
    tailscale.com/tailnet-fqdn: robbinsdale-istio-eastwestgateway.keiretsu.ts.net
    tailscale.com/proxygroup: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
  - name: tls
    port: 15443
    protocol: TCP
  - name: tls-istiod
    port: 15012
    protocol: TCP
  - name: tls-webhook
    port: 15017
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: ottawa-istio-eastwestgateway
  namespace: istio-system
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: merge
    tailscale.com/tailnet-fqdn: ottawa-istio-eastwestgateway.keiretsu.ts.net
    tailscale.com/proxygroup: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
  - name: tls
    port: 15443
    protocol: TCP
  - name: tls-istiod
    port: 15012
    protocol: TCP
  - name: tls-webhook
    port: 15017
    protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: stpetersburg-istio-eastwestgateway
  namespace: istio-system
  annotations:
    kustomize.toolkit.fluxcd.io/ssa: merge
    tailscale.com/tailnet-fqdn: stpetersburg-istio-eastwestgateway.keiretsu.ts.net
    tailscale.com/proxygroup: common-egress
spec:
  externalName: placeholder
  type: ExternalName
  ports:
  - name: status-port
    port: 15021
    protocol: TCP
  - name: tls
    port: 15443
    protocol: TCP
  - name: tls-istiod
    port: 15012
    protocol: TCP
  - name: tls-webhook
    port: 15017
    protocol: TCP
